Minor wording changes

--- a/docs/goingfurther/layout/index.html
+++ b/docs/goingfurther/layout/index.html
@@ -12,17 +12,17 @@
     <title>App layout :: Introduction to Shiny</title>
     
     
-    <link href="../../css/nucleus.css?1533024005" rel="stylesheet">
-    <link href="../../css/font-awesome.min.css?1533024005" rel="stylesheet">
-    <link href="../../css/hybrid.css?1533024005" rel="stylesheet">
-    <link href="../../css/featherlight.min.css?1533024005" rel="stylesheet">
-    <link href="../../css/perfect-scrollbar.min.css?1533024005" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1533024005" rel="stylesheet">
-    <link href="../../css/theme.css?1533024005" rel="stylesheet">
-    <link href="../../css/hugo-theme.css?1533024005" rel="stylesheet">
+    <link href="../../css/nucleus.css?1533029267" rel="stylesheet">
+    <link href="../../css/font-awesome.min.css?1533029267" rel="stylesheet">
+    <link href="../../css/hybrid.css?1533029267" rel="stylesheet">
+    <link href="../../css/featherlight.min.css?1533029267" rel="stylesheet">
+    <link href="../../css/perfect-scrollbar.min.css?1533029267" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1533029267" rel="stylesheet">
+    <link href="../../css/theme.css?1533029267" rel="stylesheet">
+    <link href="../../css/hugo-theme.css?1533029267" rel="stylesheet">
     
 
-    <script src="../../js/jquery-2.x.min.js?1533024005"></script>
+    <script src="../../js/jquery-2.x.min.js?1533029267"></script>
     
     <style type="text/css">
       :root #header + #content > #left > #rlblock_left{ 
@@ -422,13 +422,13 @@
 
 <h3 id="exercise">Exercise</h3>
 
-<p>Modify your app to display the graph across the whole width of the screen, with any of the outputs you may have created in the <a href="../../goingfurther/reactive/">reactive data</a> or <a href="../../goingfurther/graphs/">interacting with graphs</a> lessons below.</p>
+<p>Modify your app to display the graph across the whole width of the screen, with any of the outputs you may have created in the <a href="../../goingfurther/reactive/" target="_blank">reactive data</a> or <a href="../../goingfurther/graphs/" target="_blank">interacting with graphs</a> lessons below.</p>
 
 <p>Place the continent and year widgets side-by-side below the graph.</p>
 
 <h3 id="solution">Solution</h3>
 
-<p><a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/7b4cf329c9ad851f60b2bfe3daaa22487bbc318c">git:14_layout</a></p>
+<p><a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/7b4cf329c9ad851f60b2bfe3daaa22487bbc318c" target="_blank">git:14_layout</a></p>
 
 
 <footer class=" footline" >
@@ -634,20 +634,20 @@
     <div style="left: -1000px; overflow: scroll; position: absolute; top: -1000px; border: none; box-sizing: content-box; height: 200px; margin: 0px; padding: 0px; width: 200px;">
       <div style="border: none; box-sizing: content-box; height: 200px; margin: 0px; padding: 0px; width: 200px;"></div>
     </div>
-    <script src="../../js/clipboard.min.js?1533024005"></script>
-    <script src="../../js/perfect-scrollbar.min.js?1533024005"></script>
-    <script src="../../js/perfect-scrollbar.jquery.min.js?1533024005"></script>
-    <script src="../../js/jquery.sticky.js?1533024005"></script>
-    <script src="../../js/featherlight.min.js?1533024005"></script>
-    <script src="../../js/html5shiv-printshiv.min.js?1533024005"></script>
-    <script src="../../js/highlight.pack.js?1533024005"></script>
+    <script src="../../js/clipboard.min.js?1533029267"></script>
+    <script src="../../js/perfect-scrollbar.min.js?1533029267"></script>
+    <script src="../../js/perfect-scrollbar.jquery.min.js?1533029267"></script>
+    <script src="../../js/jquery.sticky.js?1533029267"></script>
+    <script src="../../js/featherlight.min.js?1533029267"></script>
+    <script src="../../js/html5shiv-printshiv.min.js?1533029267"></script>
+    <script src="../../js/highlight.pack.js?1533029267"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script src="../../js/modernizr.custom.71422.js?1533024005"></script>
-    <script src="../../js/learn.js?1533024005"></script>
-    <script src="../../js/hugo-learn.js?1533024005"></script>
+    <script src="../../js/modernizr.custom.71422.js?1533029267"></script>
+    <script src="../../js/learn.js?1533029267"></script>
+    <script src="../../js/hugo-learn.js?1533029267"></script>
 
-    <link href="../../mermaid/mermaid.css?1533024005" type="text/css" rel="stylesheet" />
-    <script src="../../mermaid/mermaid.js?1533024005"></script>
+    <link href="../../mermaid/mermaid.css?1533029267" type="text/css" rel="stylesheet" />
+    <script src="../../mermaid/mermaid.js?1533029267"></script>
     <script>
         mermaid.initialize({ startOnLoad: true });
     </script>
