--- a/presentstyle.css
+++ b/presentstyle.css
@@ -2,3 +2,24 @@
 	text-transform: none;
 }
 
+/********** Customise logo, and footer disclaimer **********/
+/* Position the corporate logo in the top right of the page */
+#header-footer .slide-logo {
+  position: absolute;
+  top: 15px;
+  right: 50px;
+  height: 60px;
+  width: 150px;
+}
+
+
+/* Style/position the footer text */
+#header-footer .slide-footer {
+    position: fixed; 
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 10px;
+    text-align: center;
+    font-size: 65%;
+}
