--- a/docs/goingfurther/layout/index.html
+++ b/docs/goingfurther/layout/index.html
@@ -3,28 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="generator" content="Hugo 0.45" />
+    <meta name="generator" content="Hugo 0.80.0" />
     <meta name="description" content="An introduction to Shiny">
 <meta name="author" content="David Mawdsley">
 
-    <link rel="shortcut icon" href="../../images/favicon.png" type="image/x-icon" />
-<link rel="icon" href="../../images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../../images/favicon.png" type="image/png">
+
     <title>App layout :: Introduction to Shiny</title>
 
     
-    <link href="../../css/nucleus.css?1544000441" rel="stylesheet">
-    <link href="../../css/fontawesome-all.min.css?1544000441" rel="stylesheet">
-    <link href="../../css/hybrid.css?1544000441" rel="stylesheet">
-    <link href="../../css/featherlight.min.css?1544000441" rel="stylesheet">
-    <link href="../../css/perfect-scrollbar.min.css?1544000441" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1544000441" rel="stylesheet">
-    <link href="../../css/theme.css?1544000441" rel="stylesheet">
-    <link href="../../css/hugo-theme.css?1544000441" rel="stylesheet">
+    <link href="../../css/nucleus.css?1634552042" rel="stylesheet">
+    <link href="../../css/fontawesome-all.min.css?1634552042" rel="stylesheet">
+    <link href="../../css/hybrid.css?1634552042" rel="stylesheet">
+    <link href="../../css/featherlight.min.css?1634552042" rel="stylesheet">
+    <link href="../../css/perfect-scrollbar.min.css?1634552042" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1634552042" rel="stylesheet">
+    <link href="../../css/atom-one-dark-reasonable.css?1634552042" rel="stylesheet">
+    <link href="../../css/theme.css?1634552042" rel="stylesheet">
+    <link href="../../css/tabs.css?1634552042" rel="stylesheet">
+    <link href="../../css/hugo-theme.css?1634552042" rel="stylesheet">
+    
     
 
-    <script src="../../js/jquery-2.x.min.js?1544000441"></script>
+    <script src="../../js/jquery-3.3.1.min.js?1634552042"></script>
 
-    <style type="text/css">
+    <style>
       :root #header + #content > #left > #rlblock_left{
           display:none !important;
       }
@@ -36,7 +39,7 @@
     </style>
     
   </head>
-  <body class="" data-url="/goingfurther/layout/">
+  <body class="" data-url="../../goingfurther/layout/">
     <nav id="sidebar" class="">
 
 
@@ -48,6 +51,15 @@
     </div>
     
   </div>
+  
+    <section id="homelinks">
+      <ul>
+        <li>
+            <a class="padding" href='../../'><i class='fas fa-home'></i> Home</a>
+        </li>
+      </ul>
+    </section>
+  
 
     <div class="highlightable">
     <ul class="topics">
@@ -57,10 +69,12 @@
           
 
 
+
+
  
   
     
-    <li data-nav-id="/basics/" title="Getting started" class="dd-item 
+    <li data-nav-id="/basics/" title="Getting started" class="dd-item
         
         
         
@@ -70,7 +84,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -79,10 +93,12 @@
           
 
 
+
+
  
   
     
-    <li data-nav-id="/ui/" title="User Interface design" class="dd-item 
+    <li data-nav-id="/ui/" title="User Interface design" class="dd-item
         
         
         
@@ -92,7 +108,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -101,10 +117,12 @@
           
 
 
+
+
  
   
     
-    <li data-nav-id="/plotting/" title="Producing plots" class="dd-item 
+    <li data-nav-id="/plotting/" title="Producing plots" class="dd-item
         
         
         
@@ -114,7 +132,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -123,10 +141,12 @@
           
 
 
+
+
  
   
     
-    <li data-nav-id="/together/" title="Putting it all together" class="dd-item 
+    <li data-nav-id="/together/" title="Putting it all together" class="dd-item
         
         
         
@@ -136,7 +156,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -145,10 +165,12 @@
           
 
 
+
+
  
   
     
-    <li data-nav-id="/deploy/" title="Deploying Shiny apps" class="dd-item 
+    <li data-nav-id="/deploy/" title="Deploying Shiny apps" class="dd-item
         
         
         
@@ -158,7 +180,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -167,10 +189,12 @@
           
 
 
+
+
  
   
     
-    <li data-nav-id="/goingfurther/" title="Going further" class="dd-item 
+    <li data-nav-id="/goingfurther/" title="Going further" class="dd-item
         parent
         
         
@@ -187,11 +211,13 @@
             
           
           
-          
+
         
           
             
             
+
+
 
 
  
@@ -213,10 +239,12 @@
             
 
 
+
+
  
   
     
-    <li data-nav-id="/goingfurther/graphs/" title="Interacting with graphs" class="dd-item 
+    <li data-nav-id="/goingfurther/graphs/" title="Interacting with graphs" class="dd-item
         
         
         
@@ -226,7 +254,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -237,10 +265,12 @@
             
 
 
+
+
  
   
     
-    <li data-nav-id="/goingfurther/layout/" title="App layout" class="dd-item 
+    <li data-nav-id="/goingfurther/layout/" title="App layout" class="dd-item
         parent
         active
         
@@ -250,7 +280,7 @@
           
       </a>
       
-              
+      
     </li>
   
  
@@ -259,13 +289,13 @@
           
         
         </ul>
-              
+      
     </li>
   
  
 
           
-         
+        
     </ul>
 
     
@@ -274,27 +304,27 @@
         <h3>More</h3>
         <ul>
           
-              <li> 
+              <li>
                   <a class="padding" href="../../about/">About</a>
               </li>
           
-              <li> 
+              <li>
                   <a class="padding" href="https://github.com/UoMResearchIT/r-shiny-course/raw/master/runningExample.zip">Download materials</a>
               </li>
           
-              <li> 
+              <li>
                   <a class="padding" href="http://bit.ly/2xP95Ef">Feedback</a>
               </li>
           
-              <li> 
+              <li>
                   <a class="padding" href="https://github.com/uomresearchit/r-shiny-course-materials/">GitHub materials</a>
               </li>
           
-              <li> 
+              <li>
                   <a class="padding" href="../../">Home</a>
               </li>
           
-              <li> 
+              <li>
                   <a class="padding" href="../../slides/">Slides</a>
               </li>
           
@@ -304,12 +334,11 @@
 
     
     <section id="footer">
-      <p>Built with <a href="https://github.com/matcornic/hugo-theme-learn"><i class="fas fa-heart"></i></a> from <a href="http://getgrav.org">Grav</a> and <a href="http://gohugo.io/">Hugo</a></p>
+      <p>Built with <a href="https://github.com/matcornic/hugo-theme-learn"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p>
 
     </section>
   </div>
 </nav>
-
 
 
 
@@ -332,6 +361,8 @@
                   <span id="toc-menu"><i class="fas fa-list-alt"></i></span>
                   
                   <span class="links">
+                 
+                 
                     
           
           
@@ -345,27 +376,26 @@
           
             <a href='../../'>Introduction to Shiny</a> > <a href='../../goingfurther/'>Going further</a> > App layout
           
-         
+        
           
-         
+        
           
-           
+        
+                 
                   </span>
                 </div>
                 
                     <div class="progress">
     <div class="wrapper">
 <nav id="TableOfContents">
-<ul>
-<li>
-<ul>
-<li><a href="#page-layout">Page layout</a>
-<ul>
-<li><a href="#exercise">Exercise</a></li>
-<li><a href="#solution">Solution</a></li>
-</ul></li>
-</ul></li>
-</ul>
+  <ul>
+    <li><a href="#page-layout">Page layout</a>
+      <ul>
+        <li><a href="#exercise">Exercise</a></li>
+        <li><a href="#solution">Solution</a></li>
+      </ul>
+    </li>
+  </ul>
 </nav>
     </div>
 </div>
@@ -374,54 +404,51 @@
               </div>
             </div>
             
-
+        <div id="head-tags">
+        
+        </div>
         
         <div id="body-inner">
           
-            <h1>App layout</h1>
+            <h1>
+              
+              App layout
+            </h1>
           
 
         
 
 
 
-
-<p>This lesson looks at how we can alter the layout of the page elements.</p>
-
+	<p>This lesson looks at how we can alter the layout of the page elements.</p>
 <h2 id="page-layout">Page layout</h2>
-
 <p>In the main part of this workshop we used the <code>fluidPage()</code> layout, with a <code>sidebarLayout()</code>.  This gives us a sidebar (<code>sidebarPanel()</code>) and a <code>mainPanel()</code>.   This is often (roughly) what we need; a small panel to set the controls for the app, and a large panel to display the app&rsquo;s output (though what you put in each panel is up to you).</p>
-
 <p>We can construct more flexible <code>fluidPage()</code> layout using the <code>fluidRow()</code> and <code>column()</code> functions.  These let us define our app on a grid, placing page elements within each cell.  The structure of UI using this approach is:</p>
-<div class="highlight"><pre style="color:#d0d0d0;background-color:#202020;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-r" data-lang="r">ui &lt;- fluidPage(
-  fluidRow(
-    column(<span style="color:#3677a9">4</span>,
-
+<div class="highlight"><pre style="color:#d0d0d0;background-color:#202020;-moz-tab-size:4;-o-tab-size:4;tab-size:4"><code class="language-r" data-lang="r">ui &lt;- <span style="color:#447fcf">fluidPage</span>(
+  <span style="color:#447fcf">fluidRow</span>(
+    <span style="color:#447fcf">column</span>(<span style="color:#3677a9">4</span>,
     ),
-    column(<span style="color:#3677a9">8</span>,
-
+    <span style="color:#447fcf">column</span>(<span style="color:#3677a9">8</span>,
     )
   ),
-  fluidRow(
-    column(<span style="color:#3677a9">4</span>,
+  <span style="color:#447fcf">fluidRow</span>(
+    <span style="color:#447fcf">column</span>(<span style="color:#3677a9">4</span>,
            &lt;&lt;page elements&gt;&gt;),
-    column(<span style="color:#3677a9">4</span>,
+    <span style="color:#447fcf">column</span>(<span style="color:#3677a9">4</span>,
            &lt;&lt;page elements&gt;&gt;),
-    column(<span style="color:#3677a9">4</span>,
+    <span style="color:#447fcf">column</span>(<span style="color:#3677a9">4</span>,
            &lt;&lt;page elements&gt;&gt;)
   )
-)</code></pre></div>
-<p>The digits give the (relative) width of each column; these should sum to 12 for each row.</p>
-
+)
+</code></pre></div><p>The digits give the (relative) width of each column; these should sum to 12 for each row.</p>
 <h3 id="exercise">Exercise</h3>
-
-<p>Modify your app to display the graph across the whole width of the screen, with any of the outputs you may have created in the <a href="../../goingfurther/reactive/" target="_blank">reactive data</a> or <a href="../../goingfurther/graphs/" target="_blank">interacting with graphs</a> lessons below.</p>
-
+<p>Modify your app to display the graph across the whole width of the screen, with any of the outputs you may have created in the <a href="../../goingfurther/reactive/">reactive data</a> or <a href="../../goingfurther/graphs/">interacting with graphs</a> lessons below.</p>
 <p>Place the continent and year widgets side-by-side below the graph.</p>
-
 <h3 id="solution">Solution</h3>
+<p><a href="https://github.com/UoMResearchIT/r-shiny-course-materials/commit/01a9bb7435bbe75a870c8720adbb7b7df308efda">15_layout</a></p>
 
-<p><a href="https://github.com/UoMResearchIT/r-shiny-course-materials/commit/01a9bb7435bbe75a870c8720adbb7b7df308efda" target="_blank">15_layout</a></p>
+
+
 
 
 <footer class=" footline" >
@@ -429,7 +456,7 @@
 </footer>
 
         
-        </div> 
+        </div>
         
 
       </div>
@@ -437,7 +464,7 @@
     <div id="navigation">
         
         
-        
+
         
             
             
@@ -610,40 +637,44 @@
                     
             
         
-        
+
         
 
 
-        
-            <a class="nav nav-prev" href="../../goingfurther/graphs/" title="Interacting with graphs"> <i class="fas fa-chevron-left"></i></a>
-        
-        
-            <a class="nav nav-next" href="../../goingfurther/reactive/" title="Reactive data" style="margin-right: 0px;"><i class="fas fa-chevron-right"></i></a>
-        
+	 
+	 
+		
+			<a class="nav nav-prev" href="../../goingfurther/graphs/" title="Interacting with graphs"> <i class="fa fa-chevron-left"></i></a>
+		
+		
+			<a class="nav nav-next" href="../../goingfurther/reactive/" title="Reactive data" style="margin-right: 0px;"><i class="fa fa-chevron-right"></i></a>
+		
+	
     </div>
 
     </section>
-    
+
     <div style="left: -1000px; overflow: scroll; position: absolute; top: -1000px; border: none; box-sizing: content-box; height: 200px; margin: 0px; padding: 0px; width: 200px;">
       <div style="border: none; box-sizing: content-box; height: 200px; margin: 0px; padding: 0px; width: 200px;"></div>
     </div>
-    <script src="../../js/clipboard.min.js?1544000441"></script>
-    <script src="../../js/perfect-scrollbar.min.js?1544000441"></script>
-    <script src="../../js/perfect-scrollbar.jquery.min.js?1544000441"></script>
-    <script src="../../js/jquery.sticky.js?1544000441"></script>
-    <script src="../../js/featherlight.min.js?1544000441"></script>
-    <script src="../../js/html5shiv-printshiv.min.js?1544000441"></script>
-    <script src="../../js/highlight.pack.js?1544000441"></script>
+    <script src="../../js/clipboard.min.js?1634552042"></script>
+    <script src="../../js/perfect-scrollbar.min.js?1634552042"></script>
+    <script src="../../js/perfect-scrollbar.jquery.min.js?1634552042"></script>
+    <script src="../../js/jquery.sticky.js?1634552042"></script>
+    <script src="../../js/featherlight.min.js?1634552042"></script>
+    <script src="../../js/highlight.pack.js?1634552042"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <script src="../../js/modernizr.custom.71422.js?1544000441"></script>
-    <script src="../../js/learn.js?1544000441"></script>
-    <script src="../../js/hugo-learn.js?1544000441"></script>
-
-    <link href="../../mermaid/mermaid.css?1544000441" type="text/css" rel="stylesheet" />
-    <script src="../../mermaid/mermaid.js?1544000441"></script>
-    <script>
-        mermaid.initialize({ startOnLoad: true });
-    </script>
+    <script src="../../js/modernizr.custom-3.6.0.js?1634552042"></script>
+    <script src="../../js/learn.js?1634552042"></script>
+    <script src="../../js/hugo-learn.js?1634552042"></script>
+    
+        
+            <script src="../../mermaid/mermaid.js?1634552042"></script>
+        
+        <script>
+            mermaid.initialize({ startOnLoad: true });
+        </script>
+    
     
 
   </body>
